--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@ abstract.addTo(map);
                 <td>' + (feature.properties['PROVINSI'] !== null ? autolinker.link(feature.properties['PROVINSI'].toLocaleString()) : '') + '</td>\
             </tr>\
             <tr>\
-                <th scope="row">Deforestation</th>\
+                <th scope="row">Deforestasi</th>\
                 <td>' + (feature.properties['Deforestat'] !== null ? autolinker.link(feature.properties['Deforestat'].toLocaleString() + '%') : '') + '</td>\
             </tr>\
             <tr>\
-                <th scope="row">Aforestation</th>\
+                <th scope="row">Aforestasi</th>\
                 <td class="visible-with-data" id="Aforestati">' + (feature.properties['Aforestati'] !== null ? autolinker.link(feature.properties['Aforestati'].toLocaleString() + '%') : '') + '</td>\
             </tr>\
             <tr>\
